Fixed some overflow issue for the main title in chrome

--- a/style.css
+++ b/style.css
@@ -400,6 +400,7 @@ body {
 .main-article-title-link {
   text-decoration: none;
   color: white;
+  overflow: hidden;
 }
 
 .main-article-title-link:hover { color: white; }
